# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake.yml
benchmarks/: benchmark.sh  plot_scaling.py  spaceship.input  spaceship_template.cfg
examples/: acorn.cfg  acorn.input  blinker.cfg  pulsar.cfg  pulsar.input  random.cfg  spaceship.cfg  spaceship.input
src/: Driver.cpp  Driver.h  Game.cpp  Game.h  main.cpp
tests/: CMakeLists.txt  beehive.cfg  beehive.out  blinker.cfg  blinker.out  block.cfg  block.out  random.cfg
